--- a/reimagine.html
+++ b/reimagine.html
@@ -210,35 +210,35 @@ The over arching design theme was: Cricket and Creativity.   </p>
 
 <section id="styles" class="s-styles page-content">
         <div class="row">
-            <div class="column large-12 tab-full" >
-                <img src="images/portfolio/pictures/image 12.png" class="animated bounceIn wow" data-wow-duration="2s">
+            <div class="column large-12 tab-full" style="margin-top:-10px">
+                <img src="images/portfolio/pictures/image 12.png" >
             </div>
         </div>
         <div class="row">
-            <div class="column large-12 tab-full"  style="padding-top:250px">
-                <img src="images/portfolio/pictures/image 13.png" class="animated bounceIn wow" data-wow-duration="2s" >
+            <div class="column large-12 tab-full" style="margin-top:-10px">
+                <img src="images/portfolio/pictures/image 13.png" >
             </div>
         </div>
         <div class="row">
-            <div class="column large-12 tab-full"  style="padding-top:250px">
-                <img src="images/portfolio/pictures/image 14.png" class="animated bounceIn wow" data-wow-duration="2s" >
+            <div class="column large-12 tab-full" style="margin-top:-10px">
+                <img src="images/portfolio/pictures/image 14.png"  >
             </div>
         </div>
         <div class="row">
-            <div class="column large-12 tab-full"  style="padding-top:250px">
-                <img src="images/portfolio/pictures/image 15.png" class="animated bounceIn wow" data-wow-duration="2s" >
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="column large-12 tab-full"  style="padding-top:250px">
-                <img src="images/portfolio/pictures/image 16.png" class="animated bounceIn wow" data-wow-duration="2s" >
+            <div class="column large-12 tab-full" style="margin-top:-10px" >
+                <img src="images/portfolio/pictures/image 15.png">
             </div>
         </div>
 
         <div class="row">
-            <div class="column large-12 tab-full"  style="padding-top:250px">
-                <img src="images/portfolio/pictures/image 17.png" class="animated bounceIn wow" data-wow-duration="2s" >
+            <div class="column large-12 tab-full" style="margin-top:-10px">
+                <img src="images/portfolio/pictures/image 16.png"  >
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="column large-12 tab-full"  style="margin-top:-10px">
+                <img src="images/portfolio/pictures/image 17.png" >
             </div>
         </div>
     </section>
