--- a/worldcup.html
+++ b/worldcup.html
@@ -158,23 +158,23 @@
 
     <section id="styles" class="s-styles page-content">
         <div class="row">
-            <div class="column large-12 tab-full"  style="padding-top:250px">
-                <img src="images/portfolio/pictures/image 6.png" class="animated bounceIn wow" data-wow-duration="2s">
+            <div class="column large-12 tab-full" style="margin-top:-10px"  >
+                <img src="images/portfolio/pictures/image 6.png" >
             </div>
         </div>
         <div class="row">
-            <div class="column large-12 tab-full"  style="padding-top:250px">
-                <img src="images/portfolio/pictures/image 11.png" class="animated bounceIn wow" data-wow-duration="2s" >
+            <div class="column large-12 tab-full" style="margin-top:-10px"  >
+                <img src="images/portfolio/pictures/image 11.png" >
             </div>
         </div>
         <div class="row">
-            <div class="column large-12 tab-full"  style="padding-top:250px">
-                <img src="images/portfolio/pictures/image 8.png" class="animated bounceIn wow" data-wow-duration="2s" >
+            <div class="column large-12 tab-full"  style="margin-top:-10px" >
+                <img src="images/portfolio/pictures/image 8.png">
             </div>
         </div>
         <div class="row">
-            <div class="column large-12 tab-full"  style="padding-top:250px">
-                <img src="images/portfolio/pictures/image 9.png" class="animated bounceIn wow" data-wow-duration="2s" >
+            <div class="column large-12 tab-full"  style="margin-top:-10px" >
+                <img src="images/portfolio/pictures/image 9.png"  >
             </div>
         </div>
     </section>
