--- a/hotstar.html
+++ b/hotstar.html
@@ -159,9 +159,9 @@ where Star celebrated the giant leaps in creativity and technology.
 
    
 
-    <section id="styles" class="s-styles page-content">
+    <!-- <section id="styles" class="s-styles page-content">
         <div class="row">
-            <div class="column large-6 tab-full">
+            <div class="column large-12 tab-full">
                 <div class="section-intro" data-num="" data-aos="fade-up">
                         <h3 class="subhead">RENDER</h3>
                         <h1 class="display-1">Venue Layout - Setup
@@ -181,13 +181,35 @@ Theme and screen graphics and the launch of the logo was created and art directe
  </p>
             </div>
 
-             <div class="column large-6 tab-full" style="margin-top:100px;">
-                 <img src="images/portfolio/pictures/venue.png" class="animated bounceIn wow" data-wow-duration="2s" >
+             
+        </div>
+    </section> -->
+
+    <section id="styles" class="s-styles page-content">
+        <div class="row">
+            <div class="column large-12 tab-full" style="margin-top:-10px"  >
+                <img src="images/portfolio/projects/hotstar/web file 01-01.jpg" >
             </div>
         </div>
+        <div class="row">
+            <div class="column large-12 tab-full" style="margin-top:-10px"  >
+                <img src="images/portfolio/projects/hotstar/web file 01-02.jpg" >
+            </div>
+        </div>
+        <div class="row">
+            <div class="column large-12 tab-full"  style="margin-top:-10px" >
+                <img src="images/portfolio/projects/hotstar/web file 01-03.jpg" >
+            </div>
+        </div>
+        <div class="row">
+            <div class="column large-12 tab-full"  style="margin-top:-10px" >
+                <img src="images/portfolio/projects/hotstar/web file 01-04.jpg" >
+            </div>
+        </div>
+        
     </section>
 
-<section id="styles" class="s-styles page-content">
+<!-- <section id="styles" class="s-styles page-content">
         <div class="row">
             <div class="column large-12 tab-full">
                 <div class="section-intro" data-num="" data-aos="fade-up">
@@ -218,7 +240,7 @@ Theme and screen graphics and the launch of the logo was created and art directe
                  <img src="images/portfolio/pictures/RHL_3197.JPG" class="animated bounceIn wow" data-wow-duration="2s" >
             </div>
         </div>
-</section>
+</section> -->
 
 
     <!-- <section id="styles" class="s-styles page-content">
