--- a/indianadvertise.html
+++ b/indianadvertise.html
@@ -155,7 +155,7 @@
 
     </section> <!-- end s-about -->
 
-    <section id="styles" class="s-styles page-content">
+    <!-- <section id="styles" class="s-styles page-content">
         <div class="row">
             <div class="column large-6 tab-full">
                 <div class="section-intro" data-num="" data-aos="fade-up">
@@ -243,9 +243,36 @@
                 
             </div>
         </div>
+    </section> -->
+
+    <section id="styles" class="s-styles page-content">
+        <div class="row">
+            <div class="column large-12 tab-full" style="margin-top:-10px"  >
+                <img src="images/portfolio/projects/thelion/web file 01-05.jpg" >
+            </div>
+        </div>
+        <div class="row">
+            <div class="column large-12 tab-full" style="margin-top:-10px"  >
+                <img src="images/portfolio/projects/thelion/web file 01-06.jpg" >
+            </div>
+        </div>
+        <div class="row">
+            <div class="column large-12 tab-full"  style="margin-top:-10px" >
+                <img src="images/portfolio/projects/thelion/web file 01-07.jpg" >
+            </div>
+        </div>
+        <div class="row">
+            <div class="column large-12 tab-full"  style="margin-top:-10px" >
+                <img src="images/portfolio/projects/thelion/web file 01-08.jpg" >
+            </div>
+        </div>
+        <div class="row">
+            <div class="column large-12 tab-full"  style="margin-top:-10px" >
+                <img src="images/portfolio/projects/thelion/web file 01-09.jpg" >
+            </div>
+        </div>
     </section>
 
-    
 
     <!-- styles
     ================================================== -->
