--- a/projects.html
+++ b/projects.html
@@ -354,7 +354,7 @@
                      </div>
                   </div>
                </div>
-               <div class="column large-4 portfolio-item filter-graphics">
+               <!-- <div class="column large-4 portfolio-item filter-graphics">
                   <div data-aos="fade-up">
                      <div class="folio-item">
                         <div class="folio-item__thumb">
@@ -373,7 +373,7 @@
                         </div>
                      </div>
                   </div>
-               </div>
+               </div> -->
                <div class="column large-4 portfolio-item filter-graphics">
                   <div data-aos="fade-up">
                      <div class="folio-item">
