--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
                 <h1>
                 A multidisciplinary designer who believes that design is a medium of communication, a solution to a problem.
-                <br>I don’t love to design, I live to design
+                <br><span style="color:#f9861a ">I don’t love to design, I live to design</span>
                 </h1>
               
                 <!-- <ul class="hero-social">
@@ -152,8 +152,7 @@
                     
 
                     <p data-aos="fade-up">
-                    A visual designer whose primary interest lies in the intersection of art, design and technology. Passionate, ambitious, optimistic, and self-assertive. Being obsessive over craft, making it personal and giving attention to detail. I'm curious, empathetic, rigorous, and experimental. I appreciate a holistic way of solving design problems in collaborative teams. I'm a firm believer that simple is hard and that design is truly about problem solving and making people's lives better.
-A go getter with a strong thirst for knowledge. Practical & attentive to detail, who combines art, design, and technology to engage target audiences. A hint of abstraction, quirkiness, experiment with colors, effective use of negative space, and clean design aesthetic are values that appear consistently in my work. 
+                    A visual designer whose primary interest lies in the intersection of art, design and technology. I'm passionate, ambitious, optimistic, and self-assertive. Being obsessive over craft, I give attention to details and try to make it personal. I'm curious, empathetic, rigorous, and experimental. I appreciate a holistic way of solving design problems in collaborative teams. I'm a firm believer that simple is challenging and design is truly about problem-solving make people's lives better. A go-getter with a strong thirst for knowledge, I am a quirky pragmatic with a hint of abstraction who experiments with colors, tackles negative space and has clean design aesthetic values that appear consistently in my work.
 
 
                     </p>
@@ -181,16 +180,18 @@ A go getter with a strong thirst for knowledge. Practical & attentive to detail,
                     <h3 class="subhead">Work Experiences</h3>
 
                     <h1 class="display-1">
-                    I focus on space and experiences
-                    designs that works.
+                    I focus on space and experience designs that work
+
                     </h1>
                 </div>
 
                 <p data-aos="fade-up">
-               My experience pans across mediums (space, print, digital, broadcast, web), but my favourite is space and experience design due to the interaction it allows. I'm a passionate leader of creative team of Brand Experience and Events team at The Walt Disney Company, I’ve led our team and helped transform the creative culture, community, and quality of work. I provide leadership, vision, and support for Visuals & Experiences for the virtual, broadcast and on-ground events and ensure that our design practice exceeds the highest industry standards.</p>
-             <p>My endeavour is to create designs and experiences that make a brand more than “just a brand” by working alongside clients to build ideas to concepts and experiences that are relevant, relatable and speak the brand’s voice </p>
-            <p>I remain extremely hands-on, being actively involved in pixel-level detail, every day. I’ve had incredible opportunities to work with various design and event agencies on a wide range of projects. I have a 6 years industry experience, working across many different fields ranging from pure digital, web, on ground experiences, traditional graphic design, mobile, kiosk, brand identity and interactive space and events.
+              My experience pans across mediums (space, print, digital, broadcast, web), but my favorite is experience design for to the interaction it allows. I'm a passionate leader of the creative team at the Brand Experience and Events department at The Walt Disney Company. I’ve led our team and helped transform the creative culture, community, and quality of work. I provide leadership, vision, and support for Visuals & Experiences for the virtual, broadcast and on-ground events and ensure that our design practice exceeds the highest industry standards.
 
+</p>
+             <p>My endeavor is to create designs and experiences that make a brand more than “just a brand” by working alongside clients help build ideas to concepts and experiences that are relevant, relatable and shape the brand's identity.
+ </p>
+            <p>I remain extremely hands-on, being actively involved in pixel-level detail, every day. I’ve had incredible opportunities to work with various design and event agencies on a wide range of projects. I have a 6 years of industry experience, in fields ranging from pure digital, web, on-ground experiences, traditional graphic design, mobile, kiosk, brand identity and interactive space and events.
 </p>
             </div> <!-- end  s-services--leftcol -->
 
@@ -199,52 +200,65 @@ A go getter with a strong thirst for knowledge. Practical & attentive to detail,
                     <li class="services-list__item is-active">
                         <div class="services-list__item-header">
                             <h5>Dec 2016 - Present</h5>
-                            <p>Designer and Visualizer for Brand Experience and Events at The Walt Disney Company (STAR India Pvt. Ltd), Mumbai</p>
+                            <p>Designer & visualizer for Brand Experience and Events at The Walt Disney Company (STAR India Pvt. Ltd), Mumbai
+</p>
                         </div>
                         <div class="services-list__item-body">
-                            <p>Providing functional design and creative ideation, graphic design, creative art direction, creating identity and event experience, mentoring and supporting the inhouse and agency design teams. Creating experiential gifts, managing on ground production and developing UI design for internal portal</p>
+                            <p>Providing functional design and creative ideation, graphic design, creative art direction, creating identity and event experience, mentoring and supporting the inhouse and agency design teams. Developing presentation templates for special projects, branding for sports event arena, player auction stage and screen content for virtual and on-ground events. Creating experiential gifts, managing on ground production and developing UI design for internal portal. Mentored a team of designers and currently leading the Brand Experience design team.
+</p>
                         </div>
                     </li> <!-- services-list__item -->
                     <li class="services-list__item">
                         <div class="services-list__item-header">
                             <h5>Jun 2016 - Dec 2016</h5>
-                            <p>Design Consultant for Hindustan Unilever at KYPSA, Mumbai</p>
+                            <p>Design Consultant for Hindustan Unilever at KYPSA, Mumbai
+</p>
                         </div>
                         <div class="services-list__item-body">
-                            <p>Graphic design, branding & strategizing, UI design, product and packaging prototyping</p>
+                            <p>Graphic design, branding, strategizing, UI UX design,  packaging and prototyping
+</p>
                         </div>
                     </li> <!-- services-list__item -->
                     <li class="services-list__item">
                         <div class="services-list__item-header">
                             <h5>Nov 2015 - May 2016</h5>
-                            <p>Assistant Wedding Designer at Rohit Bal Luxury Weddings, New Delhi </p>
+                            <p>Assistant Wedding Designer at Rohit Bal Luxury Weddings, New Delhi 
+ </p>
                         </div>
                         <div class="services-list__item-body">
-                             <p>Creative direction, event design and management, branding, conceptualizing, prototyping, material sourcing, production management and photography</p>
+                             <p>Creative direction, event design and management, branding, conceptualizing, prototyping, material sourcing, production management and photography
+</p>
                         </div>
                     </li> <!-- services-list__item -->
                     <li class="services-list__item">
                         <div class="services-list__item-header">
-                            <h5>Apr 2015 - Jul 2015</h5><p>Assistant Art Director at 5queue Production, Mumbai</p>
+                            <h5>Apr 2015 - Jul 2015</h5><p>Assistant Art Director at 5queue Production, Mumbai
+</p>
                         </div>
                         <div class="services-list__item-body">
-                            <p>Production design, art direction, set Designing, prototyping, material sourcing, styling, product management and product photography</p>
+                            <p>Production design, art direction, set designing, prototyping, material sourcing, styling, 
+product management and product photography
+</p>
                         </div>
                     </li>
                     <li class="services-list__item">
                         <div class="services-list__item-header">
-                            <h5>May 2014 - Sept 2014</h5><p>Visual Merchandiser at Bewakoof.com, Mumbai</p>
+                            <h5>June 2014 - Aug 2014</h5><p>Visual Merchandiser at Bewakoof.com, Mumbai
+</p>
                         </div>
                         <div class="services-list__item-body">
-                            <p>Visual merchandising, branding, graphic designing, production management and product photography</p>
+                            <p>Visual merchandising, branding, graphic designing, production management and product photography
+</p>
                         </div>
                     </li>
                     <li class="services-list__item">
                         <div class="services-list__item-header">
-                            <h5>Apr 2013 - Jun 2013</h5><p>Assistant Stylist at Eshaa Amiin Styling, Mumbai</p>
+                            <h5>Apr 2013 - Jun 2013</h5><p>Assistant Stylist at Esha Amiin Styling, Mumbai
+</p>
                         </div>
                         <div class="services-list__item-body">
-                            <p>Celebrity styling, material sourcing, garment sourcing, brand collaborations, photo shoots and PR</p>
+                            <p>Celebrity styling, material sourcing, garment sourcing, brand collaborations, photo shoots and PR
+</p>
                         </div>
                     </li> <!-- services-list__item -->
                     <!-- services-list__item -->
