fix: updated logo size and paragraph width

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
                     
 
-                    <p data-aos="fade-up">
+                    <p data-aos="fade-up" class="service-leftcol-body">
                     A visual designer whose primary interest lies in the intersection of art, design and technology. I'm passionate, ambitious, optimistic, and self-assertive. Being obsessive over craft, I give attention to details and try to make it personal. I'm curious, empathetic, rigorous, and experimental. I appreciate a holistic way of solving design problems in collaborative teams. I'm a firm believer that simple is challenging and design is truly about problem-solving make people's lives better. A go-getter with a strong thirst for knowledge, I am a quirky pragmatic with a hint of abstraction who experiments with colors, tackles negative space and has clean design aesthetic values that appear consistently in my work.
 
 
@@ -184,15 +184,16 @@
 
                     </h1>
                 </div>
-
+                <div class="service-leftcol-body">
                 <p data-aos="fade-up">
               My experience pans across mediums (space, print, digital, broadcast, web), but my favorite is experience design for to the interaction it allows. I'm a passionate leader of the creative team at the Brand Experience and Events department at The Walt Disney Company. I’ve led our team and helped transform the creative culture, community, and quality of work. I provide leadership, vision, and support for Visuals & Experiences for the virtual, broadcast and on-ground events and ensure that our design practice exceeds the highest industry standards.
 
 </p>
-             <p>My endeavor is to create designs and experiences that make a brand more than “just a brand” by working alongside clients help build ideas to concepts and experiences that are relevant, relatable and shape the brand's identity.
- </p>
+             <p>My endeavor is to create designs and experiences that make a brand more than “just a brand” by working alongside clients help build ideas to concepts and experiences that are relevant,<br/>relatable and shape the brand's identity.</p>
+
             <p>I remain extremely hands-on, being actively involved in pixel-level detail, every day. I’ve had incredible opportunities to work with various design and event agencies on a wide range of projects. I have a 6 years of industry experience, in fields ranging from pure digital, web, on-ground experiences, traditional graphic design, mobile, kiosk, brand identity and interactive space and events.
 </p>
+                </div>
             </div> <!-- end  s-services--leftcol -->
 
             <div class="column large-6">
@@ -625,7 +626,7 @@ I was asked to particularly make a classic circular shield as the league wanted 
                 <div class="section-intro" data-aos="fade-up">
                     <h3 class="subhead">Contact</h3>
 
-                    <h1 class="display-1">
+                    <h1 class="display-contact-header">
                     You can use floo powder or find the nearest portkey to reach me. But if you're a muggle then just hit me up at - 
                     </h1>
                 </div>
